--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
     "firebase": "^11.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
