--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.30.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "ui": "github:shadcn/ui"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
