--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.0",
     "firebase": "^11.3.1",
+    "formik": "^2.4.6",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,7 +19,9 @@
     "react-router-dom": "^6.30.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "ui": "github:shadcn/ui"
+    "ui": "github:shadcn/ui",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
