--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "firebase": "^11.3.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.482.0",
